# buffalo-lab-to-nwb

./: .gitignore  README.md  metafile.yaml  setup.cfg  setup.py
.github/workflows/: add-to-dashboard.yml
src/buffalonwb/: _version.py  add_behavior.py  add_processed_nlx_data.py  add_raw_nlx_data.py  add_units.py  conversion_module.py  dataset_information.txt  exceptions.py  make_nwb  make_nwb.py  metafile.yml  nwb.py  nwb_gui.py  read_processed_nlx_data.py  read_raw_nlx_data.py  read_sorted_spikes.py
src/buffalonwb/extras/: nwb_to_nex5.py  spatial_spike_distribution.py
src/nexfile/: README.md  nexfile.py  nexwriter2.py
