[wheel]
universal = 1

[versioneer]
VCS = git
versionfile_source = src/buffalonwb/_version.py
versionfile_build = buffalonwb/_version.py
style = pep440-pre
tag_prefix = *.*.*

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  __pycache__,
  versioneer.py

[metadata]
description-file = README.md
